more spacing in sub-nav

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -116,7 +116,7 @@ header{
 			&,
 			&:visited{
 				display: block;
-				padding: $xsmall $small;
+				padding: $small;
 				border-top: none;
 
 				@media only screen and (max-width: 1139px){
