--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -720,7 +720,7 @@ header {
       display: block; }
     .nav .sub-nav a, .nav .sub-nav a:visited {
       display: block;
-      padding: 0.25rem 0.5rem;
+      padding: 0.5rem;
       border-top: none; }
       @media only screen and (max-width: 1139px) {
         .nav .sub-nav a, .nav .sub-nav a:visited {
