--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@ Based on Simple v1.0.2 by Jason Schuller (Jason.sc)
 
 $font-color: #444;
 $font-color-inv: #fff;
-$main-color: #3498db;
+$main-color: #31656e;
 $bgc: #7f8c8d;
 $bgc2: #eee;
 $fgc: #fff;
