--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -78,7 +78,7 @@
 			display: block;
 			color: $font-color-inv;
 			margin-right: $small;
-			padding: $small;
+			padding: $medium;
 			background-color: $main-color;
 			border: 1px solid darken($main-color, 7.5%);
 
