--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -591,7 +591,7 @@ body {
   padding-bottom: 1rem;
   font-family: 'FiraSans-Regular', 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
   color: #6a6a6a;
-  background-color: #7f8c8d; }
+  background-color: #31656e; }
   @media only screen and (max-width: 1139px) {
     body {
       padding-bottom: 0; } }
@@ -658,7 +658,7 @@ header {
     top: 0;
     left: 0;
     padding: 1px;
-    border-right: 0.5em solid #7f8c8d; }
+    border-right: 0.5em solid #31656e; }
     @media only screen and (max-width: 1139px) {
       #brand .brand--image {
         display: none; } }
@@ -799,7 +799,7 @@ header {
     display: block;
     color: white;
     margin-right: 0.5rem;
-    padding: 0.5rem;
+    padding: 1rem;
     background-color: #31656e;
     border: 1px solid #254d54; }
     @media only screen and (max-width: 1139px) {
