--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -79,8 +79,8 @@
 			color: $font-color-inv;
 			margin-right: $small;
 			padding: $medium;
-			background-color: $main-color;
-			border: 1px solid darken($main-color, 7.5%);
+			background-color: $bgc;
+			border: 1px solid darken($bgc, 7.5%);
 
 			@media only screen and (max-width: 1139px){
 				margin: $medium 0 0 0;
@@ -112,7 +112,7 @@
 
 		&:focus,
 		&:hover{
-			color: $main-color;
+			color: $bgc;
 		}
 	}
 
