--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -684,9 +684,7 @@ header {
   .nav a, .nav a:visited {
     display: inline-block;
     padding: 0.75rem 1rem;
-    color: white;
-    text-shadow: 1px 1px 0 #9d9d9d;
-    border: 1px solid #6c797a; }
+    color: #444444; }
     @media only screen and (max-width: 1139px) {
       .nav a, .nav a:visited {
         -webkit-box-sizing: border-box;
@@ -721,6 +719,7 @@ header {
       display: block;
       padding: 0.5rem;
       background-color: #7f8c8d;
+      text-shadow: 1px 1px 0 #9d9d9d;
       border-top: none; }
       @media only screen and (max-width: 1139px) {
         .nav .sub-nav a, .nav .sub-nav a:visited {
