--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -683,7 +683,7 @@ header {
         margin-left: 0; } }
   .nav a, .nav a:visited {
     display: inline-block;
-    padding: 0.75rem 1rem;
+    padding: 0.5rem 1rem;
     color: #444444; }
     @media only screen and (max-width: 1139px) {
       .nav a, .nav a:visited {
@@ -704,6 +704,7 @@ header {
     list-style-image: none;
     list-style-position: outside;
     min-width: 10vw;
+    max-width: 0;
     margin: 0;
     padding: 0;
     border-top: 2px solid transparent; }
@@ -718,6 +719,7 @@ header {
     .nav .sub-nav a, .nav .sub-nav a:visited {
       display: block;
       padding: 0.5rem;
+      color: white;
       background-color: #7f8c8d;
       text-shadow: 1px 1px 0 #9d9d9d;
       border-top: none; }
