--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -76,11 +76,13 @@
 		&,
 		&:visited{
 			display: block;
-			color: $font-color-inv;
 			margin-right: $small;
-			padding: $medium;
+			padding: $lmedium;
+			font-size: $lmedium;
+			color: $font-color-inv;
 			background-color: $bgc;
 			border: 1px solid darken($bgc, 7.5%);
+			border-radius: 2px;
 
 			@media only screen and (max-width: 1139px){
 				margin: $medium 0 0 0;
