--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@ $bgc: #7f8c8d;
 $bgc2: #eee;
 $fgc: #fff;
 $medium: 1rem;
+$lmedium: $medium/1.5;
 $small: $medium/2;
 $xsmall: $medium/4;
 $large: 2*$medium;
