--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -738,7 +738,7 @@ h6 {
   box-sizing: border-box;
   margin-bottom: 0;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #7f8c8d; }
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
   .post:last-child {
     margin-bottom: 0;
     padding-bottom: 0; }
@@ -757,7 +757,7 @@ h6 {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0 1rem; }
+  margin: 1rem 0; }
 .post--title a {
   display: inline-block; }
   .post--title a:focus, .post--title a:hover {
