--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -736,6 +736,7 @@ h6 {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  margin-top: 1rem;
   margin-bottom: 0;
   padding-bottom: 1rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
@@ -757,7 +758,7 @@ h6 {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 1rem 0; }
+  margin: 0 0 1rem 0; }
 .post--title a {
   display: inline-block; }
   .post--title a:focus, .post--title a:hover {
