added extra measure, added line-height to the h1s

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -121,7 +121,7 @@
 				border-top: none;
 
 				@media only screen and (max-width: 1139px){
-					padding: $medium $medium $medium $xlarge;
+					padding: $medium $medium $medium $xxlarge;
 					border: none;
 				}
 			}
