--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -57,6 +57,10 @@
 	margin: 0;
 	padding: 0;
 
+	@media only screen and (max-width: 1139px){
+		float: none;
+	}
+
 	li{
 		display: inline-block;
 		position: relative;
