--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,6 +65,18 @@ h6{
 	font-family: 'FiraSans-Bold', 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif;
 }
 
+h1{
+	font-size: 3rem;
+}
+
+h2{
+	font-size: 2rem;
+}
+
+h3{
+	font-size: 1.56rem;
+}
+
 #content,
 #header,
 #footer{
