--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -608,7 +608,7 @@ h6 {
   font-family: 'FiraSans-Bold', 'Lucida Grande', Tahoma, Verdana, Arial, sans-serif; }
 
 h1 {
-  font-size: 1.5rem; }
+  font-size: 2.5rem; }
 
 h2 {
   font-size: 1.56rem; }
@@ -644,7 +644,8 @@ h2 {
 
 #brand {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-size: 1.5rem; }
   #brand a {
     display: inline-block; }
   #brand .brand--title {
