--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -783,7 +783,7 @@ h3 {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0 0 1rem 0;
+  margin: 1.5rem 0 3rem 0;
   line-height: 3rem; }
 .post--title a {
   display: inline-block; }
