--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -761,8 +761,7 @@ h3 {
   box-sizing: border-box;
   margin-top: 1.5rem;
   margin-bottom: 0;
-  padding-bottom: 1.5rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+  padding-bottom: 1.5rem; }
   .post:last-child {
     margin-bottom: 0;
     padding-bottom: 0;
